# meteora-dynamic-amm-info

./: .gitignore  Anchor.toml  README.md  biome.jsonc  package.json  vitest.config.mjs
generator/: ts-sdk.ts
idl/: dynamic-amm.json  dynamic-vault.json  meteora-vp.json
keys/: expo9shvoWz6Bi96TsomKkWTAWYAm4ywuzP2u8EAXaV.json
programs/meteora-vp/: Cargo.toml
programs/meteora-vp/src/: constants.rs  curve.rs  errors.rs  lib.rs
programs/meteora-vp/src/instructions/: get_virtual_price.rs  mod.rs
tests/: __setup__.ts  meteora-vp.test.ts
tests/utils/: constants.ts  helpers.ts  keypair.ts  meteora.ts
