[package]
name = "meteora_vp"
version = "0.1.0"
authors = ["Alaa Zorkane <alaazorkane@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meteora_vp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"
dynamic-amm = { git = "https://github.com/MeteoraAg/dynamic-amm-sdk.git", branch = "main" }
dynamic-vault = { git = "https://github.com/MeteoraAg/dynamic-amm-sdk.git", branch = "main" }
num-integer = "0.1.46"
